Bug 1681604 - Fixed main content being too close to header
- Fixed main content container being too close to header when there are
  two or more messages.
- Minor styles tidy up, there was vertical scroll bar on dropdown menu.
- Added more space between header and main content for Ocean theme

behatnotneeded: styling only

--- a/htdocs/theme/raw/sass/components/_toggles.scss
+++ b/htdocs/theme/raw/sass/components/_toggles.scss
@@ -66,7 +66,7 @@
     border: 0;
     position: absolute;
     right: 10px;
-    top: 5px;
+    top: 6px;
     height: 37px;
     width:42px;
     margin: 0;
